--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular-material": "^1.1.4",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "pg": "^7.1.2"
